--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <div class="tag-strip-cont full">
     <div class="tag-strip main-layout">
     <!-- <div class="tag-strip flex justify-evenly align-center main-layout"> -->
-      <h2 onclick="displayTemplates('dogs')"  >Dogs</h2>
-      <h2 onclick="displayTemplates('celebs')" class="Celebs">Celebs</h2>
-      <h2 onclick="displayTemplates('cats')" >Cats</h2>
-       <h2 onclick="displayTemplates('politics')" class="politics">Politics</h2>
-       <h2  onclick="displayTemplates('kids')" >Kids</h2>
-       <h2 onclick="displayTemplates('all')" class="All">All</h2>
+      <h2 onclick="displayTemplates('dogs')"  >Dogs </h2>
+      <h2 onclick="displayTemplates('celebs')" class="Celebs">Celebs </h2>
+      <h2 onclick="displayTemplates('cats')" >Cats </h2>
+       <h2 onclick="displayTemplates('politics')" class="politics">Politics </h2>
+       <h2  onclick="displayTemplates('kids')" >Kids </h2>
+       <h2 onclick="displayTemplates('all')" class="All">All </h2>
       </div>
     </div> 
 
@@ -97,7 +97,7 @@
               class="outine-color hide"
               type="color"
             />
-            <img  src="icons/a.png" alt="">
+            <img  src="icons/letter-a.png" alt="">
 
           </div>
           <div onclick="onOpenColorPicker(this)" class="color-cont">
@@ -166,5 +166,4 @@
   <script src="js/service/memeService.js"></script>
   <script src="js/service/galleryService.js"></script>
   <script src="js/service/utils.js"></script>
-  <script src="js/service/storage.js"></script>
 </html>
